# PythonDevIO

./: .flake8  README.md
first_app/: README.md  pyproject.toml  requirments.txt
first_app/src/greeting_app/: __init__.py  main.py
first_app/tests/: test_main.py
second_app/: .gitignore  README.md  pyproject.toml  requirements.txt
second_app/src/expense_tracker/: main.py
second_app/tests/: test_expense.py
third_app/: pyproject.toml  requirments.txt
third_app/src/expense_tracker_v2/: main.py  testing_main.py
third_app/tests/: test_expense.py  test_summary.py
