[build-system] # Declares setuptools as your build backend
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project] # PEP 621 metadata—your package will be called greeting_app
name = "expense_tracker_v2"
version = "0.1.0"
description = "Application that insert and tracks the users expenses, Calculate total spent, Filter by category, Remove individual entries, Clear all expenses"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[tool.setuptools] # Instructs setuptools to look in src/ for importable packages.
package-dir = { "" = "src" }

[tool.setuptools.packages.find] # Instructs setuptools to look in src/ for importable packages.
where = ["src"]
